Fix paragraph alignment on about page

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -6,6 +6,9 @@
 }
 
 .about {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 75%;
     overflow: auto;
     padding: 16px;
 }
@@ -15,10 +18,4 @@
     margin-bottom: 0;
     margin-top: 0;
     text-align: center;
-}
-
-.about * {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 75%;
 }
